--- a/crews/pyproject.toml
+++ b/crews/pyproject.toml
@@ -14,6 +14,7 @@ duckduckgo-search = "^6.1.7"
 browserbase = "^0.1.5"
 langchain-anthropic = "<=0.1.15"
 python-dotenv = "^1.0.1"
+agentops = "^0.2.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
